@@ -1,7 +1,7 @@
 Package: modeltools
 Title: Tools and Classes for Statistical Models
-Date: $Date: 2006-08-24 09:15:26 +0200 (Thu, 24 Aug 2006) $
-Version: 0.2-7
+Date: $Date: 2006-10-27 10:28:30 +0200 (Fri, 27 Oct 2006) $
+Version: 0.2-8
 Author: Torsten Hothorn, Friedrich Leisch, Achim Zeileis
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Description: A collection of tools to deal with statistical models. 
@@ -13,4 +13,4 @@ Description: A collection of tools to deal with statistical models.
 Depends: R (>= 2.0.1), methods, stats
 SaveImage: yes
 License: GPL
-Packaged: Thu Sep  7 12:45:51 2006; hothorn
+Packaged: Fri Oct 27 10:44:50 2006; hothorn
